<resources>
    <string name="app_name">BACI TPT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="checkedstate">Pickup</string>
    <string name="uncheckedstate">Drop</string>


    <string name="comingsoon">Coming Soon</string>
    <string name="title_activity_maps">Map</string>


    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">Time selected</string>
    <string name="selected_date">Date selected</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="drop_time">Drop Time</string>
    <string name="server_client_id">602500548635-26vijd9gi1i7molnpqkh6liq9nkg987b.apps.googleusercontent.com</string>

    <string name="title_text">Google Sign-In\nBACI Transport</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>

    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="sign_in">Sign In</string>


</resources>
