<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.SettingFragment">


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alignmentMode="alignBounds"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:useDefaultMargins="true"
        android:id="@+id/grid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Application Settings"
            android:layout_columnSpan="2"
            />

        <!-- TimePicker options -->
        <TextView
            android:id="@+id/timein_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_time"
            android:hint="Regular Pick"
            />

        <Button
            android:id="@+id/timein_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:theme="@style/MyTheme"
            />

        <!-- TimePicker options -->
        <TextView
            android:id="@+id/timeout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_time"
            android:hint="Regular Drop"
            />

        <Button
            android:id="@+id/timeout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_time"
            android:theme="@style/MyTheme"
            />


    </GridLayout>

</RelativeLayout>
